# epub-tools

./: .gitignore  LICENSE  README.md  Setup.hs  TODO  TODO.md  bookname.cabal  changelog.md  default.epubname  epub-tools.cabal  epubname.cabal  stack.yaml
backup/: lrfrename-record.hs
data/: just-authors  lrf-all-meta
doc/: INSTALL
doc/dev/: notes  notes.md
doc/hcar/: epub-tools.tex  epubtoolsCommandlineepubU-De.tex
resources/: default.rules  epubname-dsl-docs
src/: BookName.hs  bookname.hs  epubname.hs  lrfrename.hs
src/BookName/: Extract.hs  Formatters.hs  Opts.hs  Util.hs
src/BookName/Format/: Anonymous.hs  AuthorBasic.hs  AuthorDouble.hs  AuthorSt.hs  AuthorThird.hs  MagAeon.hs  MagAnalog.hs  MagApex.hs  MagBCS.hs  MagBcs.hs  MagChallengingDestiny.hs  MagDell.hs  MagEclipse.hs  MagFsf.hs  MagFutureOrbits.hs  MagGud.hs  MagInterzone.hs  MagLightspeed.hs  MagNameIssue.hs  MagNemesis.hs  MagRageMachine.hs  MagSomethingWicked.hs  Magazine.hs  SFBestOf.hs  Simple.hs  Util.hs
src/EpubName/: Formatters.hs  Opts.hs  Util.hs
src/EpubName/Format/: Anonymous.hs  AuthorBasic.hs  AuthorDouble.hs  AuthorSt.hs  AuthorThird.hs  MagAeon.hs  MagAnalog.hs  MagApex.hs  MagBcs.hs  MagChallengingDestiny.hs  MagEclipse.hs  MagFsf.hs  MagFutureOrbits.hs  MagGud.hs  MagInterzone.hs  MagLightspeed.hs  MagNameIssue.hs  MagNemesis.hs  MagRageMachine.hs  MagSomethingWicked.hs  MagUniverse.hs  SFBestOf.hs  Util.hs
src/EpubTools/: epubmeta.hs  epubname.hs  epubzip.hs
src/EpubTools/EpubMeta/: Display.hs  Edit.hs  Export.hs  Import.hs  Opts.hs  Util.hs
src/EpubTools/EpubName/: Author.hs  Compile.hs  Format.hs  Formatters.hs  Main.hs  Opts.hs  Prompt.hs  PubYear.hs  Util.hs
src/EpubTools/EpubName/Doc/: Dsl.hs  Rules.hs
src/EpubTools/EpubName/Format/: Anonymous.hs  Author.hs  AuthorBasic.hs  AuthorDouble.hs  AuthorSt.hs  AuthorThird.hs  Compile.hs  Format.hs  MagAeon.hs  MagAnalog.hs  MagApex.hs  MagBcs.hs  MagChallengingDestiny.hs  MagClarkesworld.hs  MagEclipse.hs  MagFsf.hs  MagFutureOrbits.hs  MagGud.hs  MagInterzone.hs  MagLightspeed.hs  MagLightspeedDate.hs  MagLightspeedIssue.hs  MagNameIssue.hs  MagNemesis.hs  MagRageMachine.hs  MagSomethingWicked.hs  MagUniverse.hs  MagWeirdTales.hs  PubYear.hs  SFBestOf.hs  Util.hs
src/EpubTools/EpubZip/: Opts.hs
src/app/: epubmeta.hs  epubname.hs  epubzip.hs
src/app/EpubTools/EpubMeta/: Display.hs  Edit.hs  Export.hs  Import.hs  Opts.hs  Util.hs  View.hs
src/app/EpubTools/EpubName/: Common.hs  Main.hs  Opts.hs  Prompt.hs  Util.hs
src/app/EpubTools/EpubName/Doc/: Dsl.hs  Rules.hs
src/app/EpubTools/EpubName/Format/: Author.hs  Compile.hs  Format.hs  PubYear.hs  Util.hs
src/app/EpubTools/EpubZip/: Opts.hs
src/test/EpubTools/Test/EpubName/: Format.hs  Main.hs  PubYear.hs
src/tests/: test-epubname.hs
src/tests/EpubTools/Test/EpubName/: Format.hs  PubYear.hs
testsuite/: TestSimple.hs  epubname.hs  runtests.hs
testsuite/EpubTools/: test-epubname.hs
testsuite/EpubTools/Test/EpubName/: Format.hs  PubYear.hs
testsuite/Test/BookName/Format/: Anonymous.hs  AuthorBasic.hs  AuthorDouble.hs  AuthorThird.hs  General.hs  MagAeon.hs  MagAnalog.hs  MagApex.hs  MagChallengingDestiny.hs  MagDell.hs  MagFsf.hs  MagFutureOrbits.hs  MagGud.hs  MagInterzone.hs  MagNemesis.hs  MagSomethingWicked.hs  SFBestOf.hs  Simple.hs  Util.hs
util/: all-books.hs  all-books.sh  install.hs  install.sh  win-dist.sh
util/prefs/: boring
