name:                epubname
cabal-version:       >= 1.2
version:             2.3.2
build-type:          Simple
license:             BSD3
license-file:        LICENSE
copyright:           2008-2011 Dino Morelli 
author:              Dino Morelli 
maintainer:          Dino Morelli <dino@ui3.info>
stability:           stable
homepage:            http://ui3.info/d/proj/epubname.html
synopsis:            Rename epub ebook files based on meta information
description:         Command-line utility for renaming epub ebook files 
                     based on the OPF Package metadata.
category:            Application, Console
tested-with:         GHC >= 6.12.3

executable           epubname
   main-is:          epubname.hs
   build-depends:    base >= 3 && < 5, directory, epub-metadata >= 2.0.2, 
                     mtl, regex-compat
   hs-source-dirs:   src

   -- To strip debug symbols from the binary, for Windows, not portable
   --ghc-options:      -Wall -optl-s
   ghc-options:      -Wall
